--- a/Healthy_Eating/Autumnal_soups.html
+++ b/Healthy_Eating/Autumnal_soups.html
@@ -25,7 +25,7 @@
       <ul class="menu" style="list-style-type:none;">
         <li><a href="#">Healthy Mind</a></li>
         <li><a href="./healthy_eating.html">Healthy Eating</a></li>
-        <li><a href="#">Healthy Lifestyle</a></li>
+        <li><a href="../Lifestyle/lifestyle.html">Healthy Lifestyle</a></li>
       </ul>
     </div>
   </header>
