--- a/Healthy_Eating/healthy_eating.html
+++ b/Healthy_Eating/healthy_eating.html
@@ -26,7 +26,7 @@
             <ul class="menu" style="list-style-type:none;">
                 <li><a href="#">Healthy Mind</a></li>
                 <li><a href="./healthy_eating.html">Healthy Eating</a></li>
-                <li><a href="#">Healthy Lifestyle</a></li>
+                <li><a href="../Lifestyle/lifestyle.html">Healthy Lifestyle</a></li>
             </ul>
         </div>
     </header>
@@ -169,7 +169,7 @@
         <br>
         <div class="card-container recipe-container">
             <div class="card mx-md-5" style="width: 12rem;">
-                <img src="./soup.jpg" class="card-img-top" alt="Autumnal soup" style="max-width:100%;height:auto;">
+                <img src="./soup.jpg" class="card-img-top" alt="Autumnal soup">
                 <div class="card-body">
                     <p class="card-text bg light" style="transform: rotate(0);">
                         Wrap up warm with a <a href="./Autumnal_soups.html" class="stretched-link"><b>delicious autumnal
