--- a/Lifestyle/lifestyle.html
+++ b/Lifestyle/lifestyle.html
@@ -10,22 +10,25 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+      <link href="https://fonts.googleapis.com/css2?family=Bellota&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Bellota+Text:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
+<header>
+    <h1><a href="../index.html">Serenity</a></h1>
+    <h3><a href="">Healthy Lifestyle</a></h3>
+</header>
 
   <div class="navbar">
     <ol class="menu">
-    <a href="#">Healthy Lifestyle</a>
-    <a href="#">Healthy Mind</a>
-    <a href="#">Healthy Eating</a>
+      <a href="#">Healthy Mind</a>
+      <a href="../Healthy_Eating/healthy_eating.html">Healthy Eating</a>
+      <a href="./Lifestyle/lifestyle.html">Healthy Lifestyle</a>
     </ol>
   </div>
 
-<header>
-    <h1><a href="./Emily/main_page.html">Serenity</a></h1>
-    <h3><a href="./lifestyle.html">Healthy Lifestyle</a></h3>
-</header>
+
 
 <div class="main-container">
 <ul>
@@ -44,6 +47,7 @@
       <li>Walk at Home by Leslie Sansone</li>
       <li>Pamela Reif</li>
       </ul>
+      <br> <a class="source" href="https://www.youtube.com/watch?v=IFQmOZqvtWg">https://www.youtube.com/watch?v=IFQmOZqvtWg</a>
        </div>
       </div>
       <div class="column">
@@ -60,7 +64,6 @@
         <li>Water</li>
         <li>Energy Drinks</li>
         <li>Vacuum Flask</li>
-        <li> Lunch Box</li>
         <li>Snacks</li>
         <li>Waste Bag</li>
       </ul>
@@ -77,11 +80,11 @@
         <li>Managing pain</li>
         <li>Improving sleep quality</li>
         <li>Reducing stress, agitation, and anxiety</li>
-        <li>Soothing sore joints</li>
         <li>Treating headaches and migraines</li>
         <li>Improving digestion</li>
         <li>Boosting immunity</li>
       </ul>
+    <br> <a class="source" href="https://www.healthline.com/health/what-is-aromatherapy#benefits">https://www.healthline.com/health/what-is-aromatherapy#benefits</a>
         </div>
       </div>
   </div>
@@ -89,9 +92,9 @@
 </div>
 
 <footer>
-  <a href="https://www.instagram.com"><img src="instagram.jpg.png" class="instagram" alt="instagramicon" width="20" height="20"></a>
-  <a href="https://www.facebook.com"><img src="facebook.jpg.png" class="facebook" alt="facebookicon" width="20" height="20"></a>
-  <a href="https://www.youtube.com"><img src="twitter.jpg.png" class="youtube" alt="youtubeicon" width="20" height="20"></a>
+  <a href="https://www.instagram.com"><img src="../Main_Page/instagram.jpg.png" class="instagram" alt="instagramicon" width="20" height="20"></a>
+  <a href="https://www.facebook.com"><img src="../Main_Page/facebook.jpg.png" class="facebook" alt="facebookicon" width="20" height="20"></a>
+  <a href="https://www.youtube.com"><img src="../Main_Page/youtube.jpg.png" class="youtube" alt="youtubeicon" width="20" height="20"></a>
 </footer>
 
 </body>
