--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <ul class="menu" style="list-style-type:none;">
             <li><a href="#">Healthy Mind</a></li>
             <li><a href="./Healthy_Eating/healthy_eating.html">Healthy Eating</a></li>
-            <li><a href="#">Healthy Lifestyle</a></li>
+            <li><a href="./Lifestyle/lifestyle.html">Healthy Lifestyle</a></li>
         </ul>
     </div>
 </header>
@@ -52,7 +52,7 @@
 <div class="flex-container">
 <div class="video-round">
   <video width="700" height="320" autoplay loop>
-  <source src="./Main_Page/sunset.mp4" class="rounded" type="video/mp4" style="max-width:100%;height:auto;">
+  <source src="./Main_Page/sunset.mp4" type="video/mp4" style="max-width:100%;height:auto;">
   Your browser does not support the video tag.
   </video>
 </div>  
