--- a/Lifestyle/lifestyle.html
+++ b/Lifestyle/lifestyle.html
@@ -17,17 +17,15 @@
 <body>
 <header>
     <h1><a href="../index.html">Serenity</a></h1>
-    <h3><a href="">Healthy Lifestyle</a></h3>
-</header>
-
+    <h3>Healthy Lifestyle</h3>
   <div class="navbar">
-    <ol class="menu">
-      <a href="#">Healthy Mind</a>
-      <a href="../Healthy_Eating/healthy_eating.html">Healthy Eating</a>
-      <a href="./Lifestyle/lifestyle.html">Healthy Lifestyle</a>
-    </ol>
+    <ul class="menu" style="list-style-type:none;">
+      <li><a href="#">Healthy Mind</a></li>
+      <li><a href="../Healthy_Eating/healthy_eating.html">Healthy Eating</a></li>
+      <li><a href="./Lifestyle/lifestyle.html">Healthy Lifestyle</a></li>
+    </ul>
   </div>
-
+</header>
 
 
 <div class="main-container">
