--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <div class="flex-container">
 <div class="video-round">
   <video width="700" height="320" autoplay loop>
-  <source src="./Main_Page/sunset.mp4" type="video/mp4" style="max-width:100%;height:auto;">
+  <source src="./Main_Page/sunset.mp4" type="video/mp4">
   Your browser does not support the video tag.
   </video>
 </div>  
