--- a/Lifestyle/lifestyle.html
+++ b/Lifestyle/lifestyle.html
@@ -15,18 +15,19 @@
 </head>
 
 <body>
+
+  <div class="navbar">
+    <ol class="menu">
+    <a href="#">Healthy Lifestyle</a>
+    <a href="#">Healthy Mind</a>
+    <a href="#">Healthy Eating</a>
+    </ol>
+  </div>
+
 <header>
     <h1><a href="../index.html">Serenity</a></h1>
-    <h3>Healthy Lifestyle</h3>
-  <div class="navbar">
-    <ul class="menu" style="list-style-type:none;">
-      <li><a href="#">Healthy Mind</a></li>
-      <li><a href="../Healthy_Eating/healthy_eating.html">Healthy Eating</a></li>
-      <li><a href="./Lifestyle/lifestyle.html">Healthy Lifestyle</a></li>
-    </ul>
-  </div>
+    <h3><a href="./">Healthy Lifestyle</a></h3>
 </header>
-
 
 <div class="main-container">
 <ul>
