--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <img src="./Main_Page/beach.jpg" alt="beach" class="rounded" style="max-width:100%;height:auto;"/>
     </div>
   <div class="item">
-    <img src="./Main_Page/rsz_aromatherapy.jpg" alt="herbs" class="rounded" style="max-width:100%;height:auto;"/>
-    <div class="overlay">Aromatherapy</div> 
+    <a href="./Lifestyle/lifestyle.html"><img src="./Main_Page/rsz_aromatherapy.jpg" alt="herbs" class="rounded" style="max-width:100%;height:auto;"/>
+    <div class="overlay">Aromatherapy benefits</div></a>
   </div>  
 </div>
 
@@ -60,8 +60,8 @@
 
 <div class="flex-container">
   <div class="item">
-    <img src="./Main_Page/aloe.jpg" alt="aloe" class="rounded" style="max-width:100%;height:auto;">
-    <div class="overlay">Aloe - Helps you sleep</div>
+    <a href="./Lifestyle/lifestyle.html"> <img src="./Main_Page/aloe.jpg" alt="aloe" class="rounded" style="max-width:100%;height:auto;">
+    <div class="overlay">Aloe - Helps you sleep</div></a>
   </div>
   <div class="item">
     <img src="./Main_Page/mindfulness.jpg" alt="mindfulness" class="rounded" style="max-width:100%;height:auto;">
