--- a/Lifestyle/lifestyle.html
+++ b/Lifestyle/lifestyle.html
@@ -33,7 +33,7 @@
 <ul>
   <div class="row">
       <div class="column">
-    <img class="card" src="popsugarfitness.jpeg" alt="Popsugar Fitness" width=100% height=100%>
+    <img class="card" src="popsugarfitness.jpeg" alt="Popsugar Fitness" style="max-width:100%;height:auto;">
     <h4>Workout at Home - Recommended YouTube Channels</h4>
     <div class="overlay">
       <ul class="list">
@@ -50,7 +50,7 @@
        </div>
       </div>
       <div class="column">
-    <img class="card" src="dailyhiking.jpg" alt="Daily Hiking" width=100% height=100%>
+    <img class="card" src="dailyhiking.jpg" alt="Daily Hiking" style="max-width:100%;height:auto;">
     <h4>Things to Bring by For a Day Hike</h4>
     <div class="overlay"> 
       <ul class="list">
@@ -71,7 +71,7 @@
     
       </div>
       <div  class="column">
-    <img class="card" src="aromathrapy.jpg" alt="aromatherapy" width=100% height=100%>
+    <img class="card" src="aromathrapy.jpg" alt="aromatherapy" style="max-width:100%;height:auto;">
     <h4>Aromatherapy Benefits</h4>
     <div class="overlay">
     <p>Aromatherapy is a very old technique which is believed to originate from Asia. Its common benefits are:</p>
