--- a/Lifestyle/lifestyle.html
+++ b/Lifestyle/lifestyle.html
@@ -71,7 +71,7 @@
     
       </div>
       <div  class="column">
-    <img class="card" src="aromathrapy.jpg" alt="aromatherapy" style="max-width:100%;height:auto;">
+    <img class="card" src="aromathrapy.jpg" alt="aromatherapy" width=100% height=100%>
     <h4>Aromatherapy Benefits</h4>
     <div class="overlay">
     <p>Aromatherapy is a very old technique which is believed to originate from Asia. Its common benefits are:</p>
