--- a/Healthy_Eating/xmas_recipes.html
+++ b/Healthy_Eating/xmas_recipes.html
@@ -23,7 +23,7 @@
         </a>
         <div class="drop-down">
             <ul class="menu" style="list-style-type:none;">
-                <li><a href="#">Healthy Mind</a></li>
+                <li><a href="../Mind/mind.html">Healthy Mind</a></li>
                 <li><a href="./healthy_eating.html">Healthy Eating</a></li>
                 <li><a href="../Lifestyle/lifestyle.html">Healthy Lifestyle</a></li>
             </ul>
