--- a/Lifestyle/lifestyle.html
+++ b/Lifestyle/lifestyle.html
@@ -18,9 +18,9 @@
 
   <div class="navbar">
     <ol class="menu">
-    <a href="#">Healthy Lifestyle</a>
-    <a href="#">Healthy Mind</a>
-    <a href="#">Healthy Eating</a>
+    <a href="../Lifestyle/">Healthy Lifestyle</a>
+    <a href="../Mind/mind.html">Healthy Mind</a>
+    <a href="../Healthy_Eating/healthy_eating.html">Healthy Eating</a>
     </ol>
   </div>
 
