--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a class="site-title" href="./index.html"><h1>Serenity</h1></a>
     <div class="drop-down">
         <ul class="menu" style="list-style-type:none;">
-            <li><a href="#">Healthy Mind</a></li>
+            <li><a href="./Mind/mind.html">Healthy Mind</a></li>
             <li><a href="./Healthy_Eating/healthy_eating.html">Healthy Eating</a></li>
             <li><a href="./Lifestyle/lifestyle.html">Healthy Lifestyle</a></li>
         </ul>
