--- a/Healthy_Eating/Autumnal_soups.html
+++ b/Healthy_Eating/Autumnal_soups.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Bellota&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Bellota+Text:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src="./healthy_eating.js"></script>
+ 
 
 </head>
 
@@ -44,6 +44,8 @@
         <h6>Monday 16th November 2020</h6><br>
         <hr>
       </div>
+      <div id="PotatoRating"></div>
+      <hr>
       <div>
         <img
           src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/recipe-image-legacy-id-279556_11-d852fd4.jpg?quality=90&webp=true&resize=440,400"
@@ -89,6 +91,7 @@
           <h6>Monday 16th November 2020</h6><br>
           <hr>
         </div>
+        <div id="LentilRating"></div><hr>
         <div>
           <img src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/lentil-cardamom-soup-d6a1859.jpg?quality=90&webp=true&resize=440,400" alt="Lentil Soup" class="text-wrap">
             Cheap and cheerful red lentils are jazzed up with coconut milk and plenty of spices in this quick and warming soup recipe<br>
@@ -172,13 +175,11 @@
       <a href="https://youtube.com"><img src="../Main_Page/youtube.jpg.png" class="social_icon" alt="youtube" width="40"
           height="40"></a>
     </div>
-
-
-
-    
+      
     <p>Authors: Emily Watkins & Zeynep Zeydanli</p>
   </footer>
-
+  <script src="https://cdn.jsdelivr.net/npm/rater-js@1.0.1/index.js"></script>
+  <script src="./healthy-eating.js"></script>
 </body>
 
 </html>
