--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
         <a href="https://twitter.com"><img src="./Main_Page/twitter.jpg.png" class="social_icon" alt="twitter" width="40" height="40"></a>
         <a href="https://youtube.com"><img src="./Main_Page/youtube.jpg.png" class="social_icon" alt="youtube" width="40" height="40"></a>
       <p>Authors: Emily Watkins & Zeynep Zeydanli</p>
-      <script src ="./all.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/rater-js@1.0.1/index.js"></script>
+      <script src="./all.js"></script>
+      
     </footer>
 
   </body>
